# kern

./: .gitignore  .vimspector.json  Cargo.toml  HOWTORUN.md  README.md  RUNME.md  build.rs  distances.txt  kern.toml
osm2stop/: osm2stop.c
pool/: dynapool.c  dynapool.h  poold.c  tests.c  tests.sh
py/: city.py  quality-mysql.py  show-routes.py  stats-mysql.py  stats-postgres.py
sql/: create-mysql.sql  create.sql  kpis-art-mysql.sql  kpis-mysql-art.sh  kpis-mysql.sh  kpis-mysql.sql  kpis-psql.sh  kpis.sh  kpis.sql  stops-Budapest-import.csv
sql/kpis/: kpis-mysql.sql
src/: distance.rs  extender.rs  extender2.rs  main.rs  model.rs  pool.rs  repo.rs  solver.rs  stats.rs  utils.rs
