[package]
name = "kern"
version = "0.1.0"
edition = "2021"
authors = ["bogusz.jelinski@gmail.com"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
#postgres = { version = "0.19.3", features = ["with-chrono-0_4"] }
chrono = "0.4"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.8.5"
#cc = "1.0"
hungarian = "1.1.1"
config = "0.13.1"
serde = "1.0.140"
log4rs = "1.1.1"
log = "0.4.8"

[dev-dependencies]
serial_test = "0.9.0"

[dependencies.mysql_common]
features = ["chrono"]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
