[package]
name = "kern"
version = "0.1.0"
edition = "2021"
authors = ["bogusz.jelinski@gmail.com"] 

[dependencies]
mysql = "25.0.1"
mysql_common = { version = "0.32.4", features = ["chrono"] }
#postgres = { version = "0.19.3", features = ["with-chrono-0_4"] }
chrono = "0.4.38"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.8.5"
hungarian = "1.1.1"
config = "0.13.1"
serde = "1.0.140"
log4rs = "1.1.1"
log = "0.4.8"

[dev-dependencies]
serial_test = "0.9.0"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
